# yoinker

./: Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
contrib/: yoinker-popup.sh  yoinkerd.service
nvim/lua/yoinker/: init.lua
yoinker-cli/: Cargo.toml
yoinker-cli/src/: ipc.rs  main.rs  tui.rs
yoinker-common/: Cargo.toml
yoinker-common/src/: lib.rs
yoinker-gui/: Cargo.toml
yoinker-gui/src/: main.rs
yoinkerd/: Cargo.toml
yoinkerd/src/: history.rs  main.rs  socket.rs  watcher.rs
yoinkerd/tests/: socket_integration.rs
