[package]
name = "yoinker-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI clipboard picker for yoinker"

[[bin]]
name = "yoinker-gui"
path = "src/main.rs"

[dependencies]
yoinker-common = { path = "../yoinker-common" }
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
libc = "0.2"
