[package]
name = "yoinkerd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Yoinker clipboard manager daemon"

[dependencies]
yoinker-common = { path = "../yoinker-common" }
tokio = { version = "1", features = ["full"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
